--- a/externalcss.css
+++ b/externalcss.css
@@ -48,11 +48,14 @@ code {
 }
 
 .widescreen {
-  padding-top: 56.25%;
+  width: 100%;
+  max-width: 640px;
+  /* padding-top: 56.25%; */
+  aspect-ratio: 16/9;
 }
 
-@media screen and (max-width: 640px) {
+/* @media screen and (max-width: 640px) {
   .widescreen {
     width: 100%;
   }
-}
+} */
