--- a/externalcss.css
+++ b/externalcss.css
@@ -17,10 +17,9 @@ code {
 
 .tags {
   color: aqua;
-  background: red;
+  background: transparent;
   border-radius: 10rem;
-  outline: 2px solid aqua;
-  
+  outline: 5px solid aqua;
   /*   border: aqua;
   font-size: 90%;
   padding: 0.2rem 0.4rem;
