--- a/externalcss.css
+++ b/externalcss.css
@@ -9,18 +9,12 @@ code {
   aspect-ratio: 16/9;
 }
 
-/* @media screen and (max-width: 640px) {
-  .widescreen {
-    width: 100%;
-  }
-} */
-
 .tags {
   color: aqua;
   background: transparent;
   border-radius: 10rem;
   outline: 2px solid aqua;
-  padding: 1px;
+  padding: 2px;
   
   /*
   font-size: 90%;
@@ -34,7 +28,8 @@ code {
   max-width: 100%;
   text-decoration: none;
   vertical-align: middle;
- */}
+ */
+}
 
 /* .tooltip {
   position: relative;
@@ -73,4 +68,10 @@ code {
 .tooltip:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
+} */
+
+/* @media screen and (max-width: 640px) {
+  .widescreen {
+    width: 100%;
+  }
 } */
