--- a/externalcss.css
+++ b/externalcss.css
@@ -21,7 +21,7 @@ fieldset hr {
 
 .widescreen {
   width: 100%;
-  max-width: 640px;
+  /* max-width: 640px; */
   /* padding-top: 56.25%; */
   aspect-ratio: 16/9;
 }
@@ -29,7 +29,6 @@ fieldset hr {
 /*font-size: 90%;
   
   align-items: center;
-  display: inline-flex;
   display: -ms-inline-flexbox;
   -ms-flex-align: center;
   height: 1.2rem;
