--- a/externalcss.css
+++ b/externalcss.css
@@ -10,6 +10,16 @@ fieldset hr {
   border-top: 1px dashed;
 }
 
+code {
+  background: rgba(0,0,0,0.9);
+  border: 1px solid rgba(255,255,255,0.15);
+  padding: 0px 3px;
+  margin: 0px -3px;
+  color: #aa759f;
+  border-radius: 2px;
+}
+
+
 .widescreen {
   width: 100%;
   /* max-width: 640px; */
