--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -72,36 +72,27 @@ code {
 
 .btn {
   display: inline-block;
-  background: -webkit-linear-gradient(top, rgba(40,40,40,0.3), rgba(35,35,35,0.3) 50%, rgba(10,10,10,0.3) 50%, rgba(0,0,0,0.3));
-  padding: 8px 18px;
-  border-radius: 50px;
   border: 2px solid rgba(0,0,0,0.7);
   border-bottom: 2px solid rgba(0,0,0,0.7);
   border-top: 2px solid #000;
-  color: rgba(255,255,255,0.8);
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: bold;
-  font-size: 13px;
-  text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.75);
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.05)
-}
-  
-.btn:hover {
-  background:-webkit-linear-gradient(top, rgba(40,40,40,0.6), rgba(35,35,35,0.6) 50%, rgba(10,10,10,0.8) 50%, rgba(0,0,0,0.8));
-}
+}*/
 
 .btn-gfl {
-  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35,35,35,0.3) 50%, rgba(10,10,10,0.3) 50%, rgba(0,0,0,0.3));
+  background: -webkit-linear-gradient(top, rgba(30, 120, 40, 0.3), rgba(20, 100, 20, 0.3) 50%, rgba(15, 50, 15, 0.3) 50%, rgba(10, 40, 10, 0.3));
   border: 2px solid rgba(0,0,0,0.7);
   border-bottom: 2px solid rgba(0,0,0,0.7);
   border-top: 2px solid #000;
-  color: rgba(255,255,255,0.8);
   text-shadow: 0 -1px 0 rgba(0,0,0,0.75);
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.05)
+}
+
+.btn-gfl:hover {
+  background: -webkit-linear-gradient(top, rgba(30, 120, 40, 0.6), rgba(20, 100, 20, 0.6) 50%, rgba(15, 50, 15, 0.8) 50%, rgba(10, 40, 10, 0.8));
 }
 
 .btn-gfl .icon {
   opacity: 0.6;
   background: url("../images/greenbottle.png") 0 0 no-repeat
-} */
+}
