--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -64,23 +64,8 @@ code {
   }
 } */
 
-/* .btn {
-  display: inline-block;
-  text-align: center;
-  margin: 0
-}
-
-.btn {
-  display: inline-block;
-  border: 2px solid rgba(0,0,0,0.7);
-  border-bottom: 2px solid rgba(0,0,0,0.7);
-  border-top: 2px solid #000;
-  text-shadow: 0 -1px 0 rgba(0,0,0,0.75);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.05)
-}*/
-
 .btn-gfl {
-  background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.3), rgba(91, 105, 4, 0.3) 50%, rgba(0, 100, 0, 0.3) 50%, rgba(0, 0, 0, 0.3));
+  background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.3), rgba(0, 100, 0, 0.3) 50%, rgba(91, 105, 4, 0.3) 50%, rgba(0, 0, 0, 0.3));
   border: 2px solid rgba(0,0,0,0.7);
   border-bottom: 2px solid rgba(0,0,0,0.7);
   border-top: 2px solid #000;
@@ -89,10 +74,10 @@ code {
 }
 
 .btn-gfl:hover {
-  background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.6), rgba(91, 105, 4, 0.6) 50%, rgba(0, 100, 0, 0.8) 50%, rgba(0, 0, 0, 0.8));
+  background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.6), rgba(0, 100, 0, 0.6) 50%, rgba(91, 105, 4, 0.8) 50%, rgba(0, 0, 0, 0.8));
 }
 
 .btn-gfl .icon {
   opacity: 0.6;
-  background: url("../images/greenbottle.png") 0 0 no-repeat
+  background: url("/univasset/images/greenbottle.png") 0 0 no-repeat
 }
