--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -65,11 +65,14 @@ code {
 } */
 
 .btn-gfl {
-  background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.3), rgba(0, 100, 0, 0.3) 50%, rgba(4, 105, 7, 0.3) 50%, rgba(0, 0, 0, 0.3));
+  /* background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.3), rgba(0, 100, 0, 0.3) 50%, rgba(4, 105, 7, 0.3) 50%, rgba(0, 0, 0, 0.3)); */
+  background: -webkit-linear-gradient(rgba(8, 183, 49, 0.3), rgba(0, 0, 0, 0.3));
 }
 
 .btn-gfl:hover {
-  background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.6), rgba(0, 100, 0, 0.6) 50%, rgba(4, 105, 7, 0.8) 50%, rgba(0, 0, 0, 0.8));
+  /* background: -webkit-linear-gradient(top, rgba(8, 183, 49, 0.6), rgba(0, 100, 0, 0.6) 50%, rgba(4, 105, 7, 0.8) 50%, rgba(0, 0, 0, 0.8)); */
+  background: -webkit-linear-gradient(rgba(8, 183, 49, 0.6), rgba(0, 0, 0, 0.8));
+
 }
 
 .btn-gfl .icon {
