--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -9,11 +9,13 @@ code {
 
 /* #region GFL Button */
 .btn-gfl {
-  background: -webkit-linear-gradient(rgba(8, 183, 49, 0.3), rgba(0, 0, 0, 0.3));
+  /* background: -webkit-linear-gradient(rgba(8, 183, 49, 0.3), rgba(0, 0, 0, 0.3)); */
+  background: -webkit-linear-gradient(rgba(12, 184, 50, 0.3) 50%, rgba(30, 120, 51, 0.3) 50%);
 }
 
 .btn-gfl:hover {
-  background: -webkit-linear-gradient(rgba(8, 183, 49, 0.6), rgba(0, 0, 0, 0.8));
+  /* background: -webkit-linear-gradient(rgba(8, 183, 49, 0.6), rgba(0, 0, 0, 0.8)); */
+  background: -webkit-linear-gradient(rgba(12, 184, 50, 0.6) 50%, rgba(30, 120, 51, 0.8) 50%);
 }
 
 .btn-gfl .icon {
