--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -9,13 +9,11 @@ code {
 
 /* #region GFL Button */
 .btn-gfl {
-  /* background: -webkit-linear-gradient(rgba(8, 183, 49, 0.3), rgba(0, 0, 0, 0.3)); */
-  background: -webkit-linear-gradient(rgba(12, 184, 50, 0.3) 50%, rgba(30, 120, 51, 0.3) 50%);
+  background: -webkit-linear-gradient(rgb(12, 184, 50, 0.3), rgba(30, 120, 51, 0.3) 50%, rgba(0, 100, 0, 0.3) 50%, rgba(30, 50, 5, 0.3))
 }
 
 .btn-gfl:hover {
-  /* background: -webkit-linear-gradient(rgba(8, 183, 49, 0.6), rgba(0, 0, 0, 0.8)); */
-  background: -webkit-linear-gradient(rgba(12, 184, 50, 0.6) 50%, rgba(30, 120, 51, 0.8) 50%);
+  background: -webkit-linear-gradient(rgb(12, 184, 50, 0.6), rgba(30, 120, 51, 0.6) 50%, rgba(0, 100, 0, 0.8) 50%, rgba(30, 50, 5, 0.8))
 }
 
 .btn-gfl .icon {
