--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -1,3 +1,5 @@
+@import "/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9";
+
 code {
   background: rgba(0, 0, 0, 0.9);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -9,11 +11,11 @@ code {
 
 /* #region GFL Button */
 .btn-gfl {
-  background: -webkit-linear-gradient(rgb(12, 184, 50, 0.3), rgba(30, 120, 51, 0.3) 50%, rgba(30, 50, 5, 0.3) 50%, rgba(0, 0, 0, 0.3))
+  background: -webkit-linear-gradient(rgb(12, 184, 50, 0.3), rgba(30, 120, 51, 0.3) 50%, rgba(30, 50, 5, 0.3) 50%, rgba(0, 20, 0, 0.3))
 }
 
 .btn-gfl:hover {
-  background: -webkit-linear-gradient(rgb(12, 184, 50, 0.6), rgba(30, 120, 51, 0.6) 50%,rgba(30, 50, 5, 0.8) 50%, rgba(0, 0, 0, 0.8))
+  background: -webkit-linear-gradient(rgb(12, 184, 50, 0.6), rgba(30, 120, 51, 0.6) 50%,rgba(30, 50, 5, 0.8) 50%, rgba(0, 20, 0, 0.8))
 }
 
 .btn-gfl .icon {
