--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -1,5 +1,6 @@
 @import "/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9";
 
+/* #region General */
 code {
   background: rgba(0, 0, 0, 0.9);
   border: 1px solid rgba(255, 255, 255, 0.15);
@@ -8,6 +9,11 @@ code {
   color: #aa759f;
   border-radius: 2px;
 }
+
+tr:nth-child(even) {
+  background-color: rgba(85, 107, 47, 0.25);
+}
+/* #endregion */
 
 /* #region GFL Button */
 .btn-gfl {
@@ -23,6 +29,16 @@ code {
   background: url("/univasset/images/greenbottle.png") 0 0 no-repeat
 }
 /* #endregion */
+
+
+
+
+
+
+
+
+
+
 
 /*font-size: 90%;
   
