--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -13,6 +13,10 @@ code {
 tr:nth-child(even) {
   background-color: rgba(85, 107, 47, 0.25);
 }
+
+include {
+  display: none;
+}
 /* #endregion */
 
 /* #region GFL Button */
