--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -24,6 +24,15 @@ dd {
     margin-inline-start: 10px;
 }
 
+dd::marker {
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    text-transform: none;
+    text-indent: 0px !important;
+    text-align: start !important;
+    text-align-last: start !important;
+}
+
 .inline-img {
     display: inline;
     height: 10px;
