--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -10,7 +10,7 @@ dl, table, figure, blockquote {
 }
 
 .twitter-tweet iframe {                         /* Needs more responsive solution. Works on first load only. */
-    max-width: inherit !important;
+    max-width: 100vw !important;
 }
 
 figcaption {
@@ -21,22 +21,13 @@ figcaption {
 
 dd {
     list-style-type: "+";/* url(/univasset/images/redbullet.png); */
-    /* margin-inline-start: 10px; */
+    margin-inline-start: 10px;
 }
 
 dd::before {
     content: "+ ";
     contain: initial;
 }
-
-/* dd::marker {
-    unicode-bidi: isolate;
-    font-variant-numeric: tabular-nums;
-    text-transform: none;
-    text-indent: 0px !important;
-    text-align: start !important;
-    text-align-last: start !important;
-} */
 
 .inline-img {
     display: inline;
