--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -44,6 +44,7 @@ dd {
     line-height: 20px;
 }
 
+/* Used in label, not in input */
 .selectedTag {
     background: transparent;
     color: aqua;
@@ -62,6 +63,7 @@ dd {
     text-align: center;
 }
 
+/* Used in label, not in input */
 .flex-label {
     background-color: transparent;
     line-height: 10px;
