--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -141,3 +141,38 @@ iframe[src*="www.youtube.com"] {
     display: block;
 }
 /* #endregion */
+
+.tooltip {
+    position: relative;
+    display: inline;
+}
+
+.tooltip .tooltiptext {
+    width: 300px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+    padding: 3px;
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -150px;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+    
+.tooltip:hover .tooltiptext {
+    opacity: 1;
+}
+
+/* If desktop, on top of text */
+/* If mobile, on top of screen */
+
+/* @media screen and (max-width: 800px) {
+    .tooltip .tooltiptext {
+        width: 100px;
+        height: fit-content;
+    }
+} */
