--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -144,11 +144,10 @@ iframe[src*="www.youtube.com"] {
 
 .tooltip {
     position: relative;
-    /* display: inline; */
 }
 
 .tooltip .tooltiptext {
-    width: 400px;
+    width: 300px;
     background-color: #555;
     color: #fff;
     text-align: center;
@@ -158,7 +157,7 @@ iframe[src*="www.youtube.com"] {
     z-index: 1;
     bottom: 100%;
     left: 50%;
-    margin-left: -200px;
+    margin-left: -150px;
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.5s;
@@ -172,9 +171,9 @@ iframe[src*="www.youtube.com"] {
 /* If desktop, on top of text */
 /* If mobile, on top of screen */
 
-/* @media screen and (max-width: 800px) {
+@media screen and (max-width: 540px) {
     .tooltip .tooltiptext {
-        width: 100px;
-        height: fit-content;
+        width: 200px;
+        margin-left: -100px;
     }
-} */
+}
