--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -36,19 +36,21 @@ dd {
     border-radius: 10rem;
     padding: 0px 3px;
     display: inline-grid;                       /* For making the tag buttons stay together on wrap. */
+    background: transparent;
+    color: aqua;
 }
 
 .card-tags {
-    background: transparent;
-    color: aqua;
+    /* background: transparent;
+    color: aqua; */
     line-height: 20px;
 }
 
 /* Used in label, not in input */
-.selectedTag {
+/* .selectedTag {
     background: transparent;
     color: aqua;
-}
+} */
 
 .unselectedTag {
     background: aqua;
