--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -38,19 +38,29 @@ dd {
     border-radius: 10rem;
     padding: 0px 3px;
     display: inline-grid;                       /* For making the tag buttons stay together on wrap. */
+}
+
+.card-tags {
+    background: transparent;
+    color: aqua;
+    line-height: 20px;
+}
+
+label.tags {
+    background: aqua;
+    color: black;
+}
+
+label.tags.checked {
     background: transparent;
     color: aqua;
 }
 
-.card-tags {
-    line-height: 20px;
-}
-
 /* Used in label, not in input */
-.unselectedTag {
+/* .unselectedTag {
     background: aqua;
     color: black;
-}
+} */
 /* #endregion */
 
 /* #region Input Type Selector */
@@ -65,7 +75,12 @@ dd {
     background-color: transparent;
     line-height: 10px;
     flex: 50%;
+    /* flex: calc(100% / 2); */
 }
+
+/* .flex-label.checked {
+    background-color: darkgreen;
+} */
 
 .flex-checked {
     background-color: darkgreen;
