--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -145,7 +145,7 @@ iframe[src*="www.youtube.com"] {
     position: relative;
 }
 
-.tooltip + .tooltiptext {
+.tooltip .tooltiptext {
     width: 300px;
     background-color: #555;
     color: #fff;
@@ -162,7 +162,7 @@ iframe[src*="www.youtube.com"] {
     transition: opacity 0.3s;
 }
     
-.tooltip:hover + .tooltiptext {
+.tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
 }
