--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -10,11 +10,6 @@ dl, table, figure, blockquote {
     margin: 0px;
 }
 
-/* Needs more responsive solution. Works on first load only. */
-/* .twitter-tweet iframe {
-    max-width: 100vw !important;
-} */
-
 figcaption {
     font-size: 1px;
     text-align: center;
@@ -138,5 +133,9 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
     aspect-ratio: 16/9;
     border: 0px;
     display: block;
+}
+
+.twitter-tweet {
+    max-width: calc(100%-100px) !important;
 }
 /* #endregion */
