--- a/GFL/indexstyle.css
+++ b/GFL/indexstyle.css
@@ -66,7 +66,7 @@ label.tags.checked/* , label.tags:has(input:checked) */ {
     flex: calc(100% / 3);
 }
 
-.flex-label.checked/* , .flex-label:has(input:checked) */ {
+/* .flex-label.checked, */ .flex-label:has(input:checked) {
     background-color: darkgreen;
 }
 
@@ -138,5 +138,4 @@ iframe[src*="www.youtube.com"], iframe[src*="streamable.com"] {
 .twitter-tweet > iframe[src*="platform.twitter.com"] {
     max-width: 100%;
 }
-/* calc(100%-100px) !important */
 /* #endregion */
