--- a/univasset/scripts/externalcss.css
+++ b/univasset/scripts/externalcss.css
@@ -1,4 +1,5 @@
 @import "/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9";
+@import "/univasset/scripts/htmlgenerator/htmlgenerator.css";
 @import "/univasset/scripts/include/includefile.css";
 @import "/univasset/scripts/pageheader/header.css";
 
