--- a/univasset/scripts/htmlgenerator/htmlgenerator.css
+++ b/univasset/scripts/htmlgenerator/htmlgenerator.css
@@ -45,19 +45,19 @@
 /* #endregion */
 
 /* #region Freeze Cells */
-.func_table > table.freeze_row th {
+.func_table > .freeze_row th {
     position: sticky;
     top: 0;
     z-index: 1;
 }
 
-.func_table > table.freeze_col tr > :first-child {
+.func_table > .freeze_col tr > :first-child {
     position: sticky;
     left: 0;
     z-index: 1;
 }
 
-.func_table th:first-child {
+.func_table > .freeze_col.freeze_row th:first-child {
     z-index: 2;
 }
 /* #endregion */
