--- a/univasset/scripts/htmlgenerator/htmlgenerator.css
+++ b/univasset/scripts/htmlgenerator/htmlgenerator.css
@@ -1,13 +1,15 @@
-/* #region Google Document */
-.func_googleDoc {
+/* #region General */
+[class*="func_"] {
     border-style: inset;
 }
+/* #endregion */
 
-.func_googleDoc button {
+/* #region Google Document */
+.func_googleDoc > button {
     float: right;
 }
 
-.func_googleDoc iframe {
+.func_googleDoc > iframe {
     aspect-ratio: 1/1;
     width: 100%;
     border: 0;
@@ -16,7 +18,6 @@
 
 /* #region Responsive Table */
 .func_table {
-    border-style: inset;
     overflow: auto;
 }
 
@@ -61,4 +62,14 @@
     z-index: 2;
 }
 /* #endregion */
+/* #endregion */
+
+/* #region Event Timer */
+.func_timer > img {
+    width: 100%;
+}
+
+.func_timer > span {
+    text-align: center;
+}
 /* #endregion */
