--- a/GFL/index.css
+++ b/GFL/index.css
@@ -1,4 +1,4 @@
-@import "/univasset/scripts/externalcss.css";
+@import "../univasset/scripts/externalcss.css";
 
 /* #region General */
 input[type="checkbox"], input[type="radio"] {
@@ -80,6 +80,7 @@ label.tags {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+    border-style: initial;
 }
 
 #input-type-container > label {
