--- a/univasset/scripts/htmlgenerator/htmlgenerator.css
+++ b/univasset/scripts/htmlgenerator/htmlgenerator.css
@@ -1,7 +1,7 @@
 /* #region General */
-[class*="func_"] {
+/* [class*="func_"] {
     border-style: inset;
-}
+} */
 /* #endregion */
 
 /* #region Google Document */
