--- a/PNC/units.css
+++ b/PNC/units.css
@@ -65,13 +65,15 @@ input[type="checkbox"], input[type="radio"] {
     width: fit-content;
 }
 
-.func_table input ~ span {
+input ~ .arma {
     opacity: 0.3;
-    background-position: 0 0;
+    height: inherit;
+    object-fit: contain;
+/*  background-position: 0 0;
     background-size: 16px 16px;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat;*/
 }
 
-.func_table input:checked ~ span {
+input:checked ~ .arma {
     opacity: 1;
 }
