--- a/PNC/units.css
+++ b/PNC/units.css
@@ -13,12 +13,12 @@
     background: #282e1f !important;
 }
 
-.func_table > .freeze_col tr > :first-child {
+.func_table > .freeze-col tr > :first-child {
     border-right: 1px dashed #b5e853;
     background: #1b1b1b;
 }
 
-.func_table > .freeze_row th {
+.func_table > .freeze-row th {
     background: #1b1b1b;
 }
 /* #endregion */
@@ -67,13 +67,13 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 .arma > img {
-    opacity: 0.3;
-    height: 24px;
+    opacity: 0.2;
+    height: 22px;
     object-fit: contain;
-    /* float: right; */
+    vertical-align: middle;
 }
 
-.arma > input:checked ~ img {
+.arma > input:checked + img {
     opacity: 1;
 }
 /* #endregion */
