--- a/GFL/faqs.css
+++ b/GFL/faqs.css
@@ -76,10 +76,14 @@ label.tags {
     background-color: transparent;
     line-height: 10px;
     flex: calc(100% / 3);
-}
+    }
 
 #input-type-container > label:has(input:checked) {
     background-color: darkgreen;
+}
+
+#input-type-container h2 {
+    margin: 0px 0px 10px;
 }
 
 #search-text {
