--- a/GFL/index.css
+++ b/GFL/index.css
@@ -18,9 +18,9 @@
 
 .func_timer > span {
     position: absolute;
-    text-shadow: 3px 0 black, -3px 0 black, 0 3px black, 0 -3px black, 2px 2px black, -2px -2px black, 2px -2px black, -2px 2px black;
     left: 0;
+    bottom: 0;
     width: 100%;
-    bottom: 5px;
     font-size: 2.5rem;
+    -webkit-text-stroke: 1.13rem black;
 }
