--- a/GFL/index.css
+++ b/GFL/index.css
@@ -21,6 +21,6 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    font-size: 2.5rem;
-    -webkit-text-stroke: 0.1rem black;
+    font-size: clamp(1.5rem, 8vw, 2.5rem);
+    -webkit-text-stroke: min(1vw, 0.1rem) black;
 }
