--- a/PNC/units.css
+++ b/PNC/units.css
@@ -4,10 +4,6 @@
     height: 95vh;
 }
 
-#stats, #data {
-    display: none;
-}
-
 input[type="checkbox"], input[type="radio"] {
     appearance: none;
     margin: 0px;
@@ -77,19 +73,13 @@ input[type="checkbox"], input[type="radio"] {
 }
 /* #endregion */
 
-/* #region Arma */
-.arma {
-    float: right;
+#stats, #data {
+    display: none;
 }
 
-.arma > img {
-    opacity: 0.2;
-    height: 22px;
+.arma {
+    float: right;
+    height: 1.4rem;
     object-fit: contain;
     vertical-align: middle;
 }
-
-.arma > input:checked + img {
-    opacity: 1;
-}
-/* #endregion */
