--- a/PNC/units.css
+++ b/PNC/units.css
@@ -77,14 +77,14 @@ input[type="checkbox"], input[type="radio"] {
     display: none;
 }
 
+/* #region Arma */
 .arma {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .arma > img {
-    /* float: right; */
     height: 1rem;
-    object-fit: contain;
-    vertical-align: middle;
 }
+/* #endregion */
