--- a/univasset/scripts/tooltip.css
+++ b/univasset/scripts/tooltip.css
@@ -1,58 +1,66 @@
-.tooltip {
+.tooltip, :has(> .tooltiptext) {
     position: relative;
 }
-  
-  /* Interactible */
-.tooltip .tooltiptext {
-    position: absolute;
-    width: 300px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 8px;
-    padding: 3px;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -150px;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s;
+
+.tooltiptext {
+    --tipwidth: 300px;
+    width: var(--tipwidth);
+    margin-left: calc(var(--tipwidth) / -2);
 }
-    
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
-}
-    
-/* Descriptive */
-/* .tooltip + .tooltiptext {
-    width: 300px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 8px;
-    padding: 3px;
-    position: relative;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -150px;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-    
-.tooltip:hover + .tooltiptext {
-    visibility: visible;
-    opacity: 1;
-} */
-/* If desktop, on top of text */
-/* If mobile, on top of screen */
   
 @media screen and (max-width: 720px) {
-    .tooltip .tooltiptext {
+    .tooltiptext {
+        --tipwidth: 100px;
+    }
+}
+
+/* Interactible */
+.tooltip > .tooltiptext {
+    position: absolute;
+    /* width: 300px; */
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+    padding: 3px;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    /* margin-left: -150px; */
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+/* @media screen and (max-width: 720px) {
+    .tooltip > .tooltiptext {
         width: 100px;
         margin-left: -50px;
     }
+} */
+    
+/* Descriptive */
+.tooltip + .tooltiptext {
+    position: absolute;
+    /* width: 300px; */
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+    padding: 3px;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    /* margin-left: -150px; */
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
+
+.tooltip:hover + .tooltiptext , .tooltip:hover > .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+/* If desktop, on top of text
+/* If mobile, on top of screen */
+  
