--- a/univasset/scripts/tooltip.css
+++ b/univasset/scripts/tooltip.css
@@ -1,65 +1,52 @@
-.tooltip, :has(> .tooltiptext) {
-    position: relative;
+@supports selector(:has) {
+    :has(> .tooltiptext) {
+        position: relative;
+    }
+}
+
+@supports not selector(:has) {
+    .tooltip {
+        position: relative;
+    }
 }
 
 .tooltiptext {
     --tipwidth: 300px;
+    --offset: 3px;
     width: var(--tipwidth);
-    margin-left: calc(var(--tipwidth) / -2);
+    margin-left: calc((var(--tipwidth) / -2) - var(--offset));
+    padding: var(--offset);
+    position: absolute;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+    z-index: 1;
+    left: 50%;
+    visibility: hidden;
+    opacity: 0;
 }
   
 @media screen and (max-width: 720px) {
     .tooltiptext {
-        --tipwidth: 100px;
+        --tipwidth: 150px;
     }
 }
 
-/* Interactible */
-.tooltip > .tooltiptext {
-    position: absolute;
-    /* width: 300px; */
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 8px;
-    padding: 3px;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    /* margin-left: -150px; */
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-/* @media screen and (max-width: 720px) {
-    .tooltip > .tooltiptext {
-        width: 100px;
-        margin-left: -50px;
-    }
-} */
-    
-/* Descriptive */
 .tooltip + .tooltiptext {
-    position: absolute;
-    /* width: 300px; */
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 8px;
-    padding: 3px;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    /* margin-left: -150px; */
-    visibility: hidden;
-    opacity: 0;
     transition: opacity 0.3s;
+    bottom: 50%;
+}
+
+.tooltip > .tooltiptext {
+    transition: opacity 0.3s;
+    bottom: 100%;
 }
 
 .tooltip:hover + .tooltiptext , .tooltip:hover > .tooltiptext {
     visibility: visible;
     opacity: 1;
+    transition: opacity 0.3s;
 }
 /* If desktop, on top of text
 /* If mobile, on top of screen */
