--- a/GFL/index.css
+++ b/GFL/index.css
@@ -1,4 +1,4 @@
-@import "/univasset/scripts/externalcss.css";
+@import "../univasset/scripts/externalcss.css";
 
 #links {
     display: grid;
@@ -21,6 +21,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    font-size: 2.5rem;
+    white-space: nowrap;
+    font-size: min(8cqw, 2.5rem);
     -webkit-text-stroke: min(1vw, 0.1rem) black;
 }
