--- a/univasset/scripts/tooltip.css
+++ b/univasset/scripts/tooltip.css
@@ -1,35 +1,60 @@
-:has(> .tooltiptext) {
-    position: relative;
-}
+@supports (hover: hover) {
+    :has(> .tooltiptext) {
+        position: relative;
+    }
 
-.tooltiptext {
-    width: 300px;
-    padding: 3px;
-    transform: translateX(50%);
-    position: absolute;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 8px;
-    z-index: 1;
-    left: 50%;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s;
-}
-
-@media screen and (max-width: 720px) {
     .tooltiptext {
-        width: 150px;
+        position: absolute;
+        width: 300px;
+        padding: 3px;
+        transform: translateX(50%);
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 8px;
+        z-index: 1;
+        left: 50%;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+    
+    @media screen and (max-width: 720px) {
+        .tooltiptext {
+            width: 150px;
+        }
+    }
+    
+    .tooltip + .tooltiptext {
+        bottom: 50%;
+    }
+    
+    .tooltip > .tooltiptext {
+        bottom: 100%;
     }
 }
 
-.tooltip + .tooltiptext {
-    bottom: 50%;
-}
-
-.tooltip > .tooltiptext {
-    bottom: 100%;
+@supports (hover: none) {
+    .tooltiptext {
+        position: fixed;
+        top: 0;
+        width: 300px;
+        padding: 3px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 8px;
+        z-index: 1;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
+    
+    @media screen and (max-width: 720px) {
+        .tooltiptext {
+            width: 100vw;
+        }
+    }
 }
 
 .tooltip:hover + .tooltiptext , .tooltip:hover > .tooltiptext {
